{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 107,
  "lineage": "2045f033-4e70-7a6f-1f06-7a88ce325806",
  "resources": [
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:306915938937:instance/i-01bd916d4fe4d9d89",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "NetworkingWorkshopInstanceProfile-dev",
            "id": "i-01bd916d4fe4d9d89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00e68cabcb0b4efbb",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "BusinessUnit": "technology",
                  "Company": "AcmeCorporation",
                  "CostCenter": "eng-001",
                  "Developer": "platform-team",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Manager": "tech-lead@acme.com",
                  "Owner": "team-cloud@acme.com",
                  "Repository": "github.com/acme/network-immersion-day-tf"
                },
                "tags_all": {
                  "BusinessUnit": "technology",
                  "Company": "AcmeCorporation",
                  "CostCenter": "eng-001",
                  "Developer": "platform-team",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Manager": "tech-lead@acme.com",
                  "Owner": "team-cloud@acme.com",
                  "Repository": "github.com/acme/network-immersion-day-tf"
                },
                "throughput": 125,
                "volume_id": "vol-0b5147c589491d04b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d75082e276638c30",
            "tags": {
              "Name": "VPC A Private AZ1 Server"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Private AZ1 Server",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03d0e41d0263c80ea"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2023",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f3caa1cf4417e51b",
            "arn": "arn:aws:ec2:us-east-1:306915938937:instance/i-08ad77ae96c4df139",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "NetworkingWorkshopInstanceProfile-dev",
            "id": "i-08ad77ae96c4df139",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005ff27e20bb1d5fd",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-44-201-84-39.compute-1.amazonaws.com",
            "public_ip": "44.201.84.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "BusinessUnit": "technology",
                  "Company": "AcmeCorporation",
                  "CostCenter": "eng-001",
                  "Developer": "platform-team",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Manager": "tech-lead@acme.com",
                  "Owner": "team-cloud@acme.com",
                  "Repository": "github.com/acme/network-immersion-day-tf"
                },
                "tags_all": {
                  "BusinessUnit": "technology",
                  "Company": "AcmeCorporation",
                  "CostCenter": "eng-001",
                  "Developer": "platform-team",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Manager": "tech-lead@acme.com",
                  "Owner": "team-cloud@acme.com",
                  "Repository": "github.com/acme/network-immersion-day-tf"
                },
                "throughput": 125,
                "volume_id": "vol-00330df57875483db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f208ae5bac348718",
            "tags": {
              "Name": "VPC A Public AZ2 Server"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Public AZ2 Server",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e3f5429da8f7a88"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2023",
            "module.iam_roles.aws_iam_instance_profile.ec2_profile",
            "module.iam_roles.aws_iam_role.ec2_role",
            "module.security_groups.aws_security_group.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:internet-gateway/igw-05991233a9266e473",
            "id": "igw-05991233a9266e473",
            "owner_id": "306915938937",
            "tags": {
              "Name": "VPC A IGW"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A IGW",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0733c409b42483c3d",
            "arn": "arn:aws:ec2:us-east-1:306915938937:elastic-ip/eipalloc-0733c409b42483c3d",
            "domain": "vpc",
            "id": "eipalloc-0733c409b42483c3d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-50-234-157.compute-1.amazonaws.com",
            "public_ip": "100.50.234.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VPC A NATGW-eip"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A NATGW-eip",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0733c409b42483c3d",
            "association_id": "eipassoc-0693046da9c4acff1",
            "connectivity_type": "public",
            "id": "nat-00c456baf615dadd4",
            "network_interface_id": "eni-0e1fab0445ad3d165",
            "private_ip": "10.0.0.10",
            "public_ip": "100.50.234.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb885209e4e83122",
            "tags": {
              "Name": "VPC A NATGW"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A NATGW",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:network-acl/acl-07030f5b652847a75",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07030f5b652847a75",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "306915938937",
            "subnet_ids": [
              "subnet-068924a46e963fd29",
              "subnet-0cb885209e4e83122",
              "subnet-0d75082e276638c30",
              "subnet-0f208ae5bac348718"
            ],
            "tags": {
              "Name": "VPC A Workload Subnets NACL"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Workload Subnets NACL",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:route-table/rtb-0fe1db938d04a437d",
            "id": "rtb-0fe1db938d04a437d",
            "owner_id": "306915938937",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c456baf615dadd4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC A Private Route Table"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Private Route Table",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:route-table/rtb-01275655b075fdbcc",
            "id": "rtb-01275655b075fdbcc",
            "owner_id": "306915938937",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05991233a9266e473",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC A Public Route Table"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Public Route Table",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e91b692053f4048",
            "route_table_id": "rtb-0fe1db938d04a437d",
            "subnet_id": "subnet-0d75082e276638c30"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f6783ad9f94f679",
            "route_table_id": "rtb-0fe1db938d04a437d",
            "subnet_id": "subnet-068924a46e963fd29"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2ebbb91ad6c4a4f",
            "route_table_id": "rtb-01275655b075fdbcc",
            "subnet_id": "subnet-0cb885209e4e83122"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0908fa55ca7734e88",
            "route_table_id": "rtb-01275655b075fdbcc",
            "subnet_id": "subnet-0f208ae5bac348718"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kms_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:security-group/sg-0c7266bb726ba012b",
            "description": "Allow HTTPS from private subnets to KMS endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7266bb726ba012b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.3.0/24"
                ],
                "description": "HTTPS from private subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "VPC A KMS Endpoint SG",
            "name_prefix": "",
            "owner_id": "306915938937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC A KMS Endpoint SG"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A KMS Endpoint SG",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:security-group/sg-03d0e41d0263c80ea",
            "description": "Permite ICMP apenas da instancia publica",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d0e41d0263c80ea",
            "ingress": [],
            "name": "VPC A Security Group Private",
            "name_prefix": "",
            "owner_id": "306915938937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC A Security Group Private"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Security Group Private",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:security-group/sg-05e3f5429da8f7a88",
            "description": "Permite ICMP do IP local configurado",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e3f5429da8f7a88",
            "ingress": [],
            "name": "VPC A Security Group Public",
            "name_prefix": "",
            "owner_id": "306915938937",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC A Security Group Public"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A Security Group Public",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ingress_from_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ICMP do security group publico",
            "from_port": -1,
            "id": "sgrule-2775496368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-03d0e41d0263c80ea",
            "security_group_rule_id": "sgr-0a30f1b608b8ac5fe",
            "self": false,
            "source_security_group_id": "sg-05e3f5429da8f7a88",
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_ingress_from_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "177.40.221.6/32"
            ],
            "description": "ICMP do meu IP",
            "from_port": -1,
            "id": "sgrule-130845666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05e3f5429da8f7a88",
            "security_group_rule_id": "sgr-0b90ae9bcb88977cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_ingress_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ICMP do security group privado",
            "from_port": -1,
            "id": "sgrule-2520628803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-05e3f5429da8f7a88",
            "security_group_rule_id": "sgr-0e1bc3b22c69c4692",
            "self": false,
            "source_security_group_id": "sg-03d0e41d0263c80ea",
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private",
            "module.security_groups.aws_security_group.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:subnet/subnet-0d75082e276638c30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d75082e276638c30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306915938937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-private-us-east-1a"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A-private-us-east-1a",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:subnet/subnet-068924a46e963fd29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068924a46e963fd29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306915938937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-private-us-east-1b"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A-private-us-east-1b",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:subnet/subnet-0cb885209e4e83122",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb885209e4e83122",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306915938937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-public-us-east-1a"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A-public-us-east-1a",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:subnet/subnet-0f208ae5bac348718",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f208ae5bac348718",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "306915938937",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC A-public-us-east-1b"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A-public-us-east-1b",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:vpc/vpc-0b53171a73a81aa2b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073ef03671c442275",
            "default_route_table_id": "rtb-035ff91eab7ca5321",
            "default_security_group_id": "sg-05e75697fbc28eb15",
            "dhcp_options_id": "dopt-008d8827ead3790ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b53171a73a81aa2b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035ff91eab7ca5321",
            "owner_id": "306915938937",
            "tags": {
              "Name": "VPC A"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:vpc-endpoint/vpce-0fa7178160955231d",
            "dns_entry": [
              {
                "dns_name": "vpce-0fa7178160955231d-emh6ttjc.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fa7178160955231d-emh6ttjc-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fa7178160955231d-emh6ttjc-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10466193E0VIPENIJMIK"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z1036130P7WOAO94CIJG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fa7178160955231d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05814949ff6dfb78b",
              "eni-0855990a5c07340fb"
            ],
            "owner_id": "306915938937",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c7266bb726ba012b"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.173",
                "subnet_id": "subnet-0d75082e276638c30"
              },
              {
                "ipv4": "10.0.3.4",
                "subnet_id": "subnet-068924a46e963fd29"
              }
            ],
            "subnet_ids": [
              "subnet-068924a46e963fd29",
              "subnet-0d75082e276638c30"
            ],
            "tags": {
              "Name": "VPC A KMS Endpoint"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A KMS Endpoint",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.kms_endpoint",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:306915938937:vpc-endpoint/vpce-01a60ee70fa2577ee",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01a60ee70fa2577ee",
            "ip_address_type": "ipv4",
            "owner_id": "306915938937",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01275655b075fdbcc",
              "rtb-0fe1db938d04a437d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "VPC A S3 Endpoint"
            },
            "tags_all": {
              "BusinessUnit": "technology",
              "Company": "AcmeCorporation",
              "CostCenter": "eng-001",
              "Developer": "platform-team",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Manager": "tech-lead@acme.com",
              "Name": "VPC A S3 Endpoint",
              "Owner": "team-cloud@acme.com",
              "Repository": "github.com/acme/network-immersion-day-tf"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b53171a73a81aa2b"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}